# brcurl

./: AGENTS.md  Cargo.toml  README.md
src/: lib.rs
tests/: compare.sh  url.txt
tests/bcurl/: 001_https___www_youtube_com_watch_v_q7K0vRUKXKc.txt  002_https___calendar_google_com_calendar_u_0_r_week_2026_3_29_pli_1.txt  003_https___github_com_RohanAdwankar.txt
tests/bcurl-v/: 001_https___www_youtube_com_watch_v_q7K0vRUKXKc.html  002_https___calendar_google_com_calendar_u_0_r_week_2026_3_29_pli_1.html  003_https___github_com_RohanAdwankar.html
tests/curl/: 001_https___www_youtube_com_watch_v_q7K0vRUKXKc.html  001_https___www_youtube_com_watch_v_q7K0vRUKXKc.txt  002_https___calendar_google_com_calendar_u_0_r_week_2026_3_29_pli_1.html  002_https___calendar_google_com_calendar_u_0_r_week_2026_3_29_pli_1.txt  003_https___github_com_RohanAdwankar.html  003_https___github_com_RohanAdwankar.txt
