[package]
name = "brcurl"
version = "0.1.0"
edition = "2024"
authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
description = "curl that acts like a browser"
repository = "https://github.com/RohanAdwankar/brcurl"
license = "MIT"
keywords = ["CLI", "DOM", "browser", "AI", "devtool"]


[[bin]]
name = "brcurl"
path = "src/bin/brcurl.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
headless_chrome = "1.0"
